envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-api
  labels:
    app: news-api
spec:
  selector:
    app: news-api
  ports:
  - name: envoy
    port: 8000
    protocol: TCP
